--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,65 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
+
+:root {
+  /* LIGHTMODE */
+  --NAV-BGCOLOR: beige;
+
+  /* FONT-SIZE */
+
+  /* FONT FAMILY */
+  --LOGO-FONT: "Poppins", sans-serif;
+}
+
+/* STYLES FOR THE HEADER COMPONENT */
+nav {
+  width: 100%;
+  height: 70px;
+  background-color: var(--NAV-BGCOLOR);
+  display: flex;
+  justify-content: space-evenly;
+  padding: 10px;
+  align-items: center;
+  font-family: var(--LOGO-FONT);
+}
+
+.logo {
+  width: 20%;
+  outline: 2px solid black;
+}
+
+.logo-inner-wrapper {
+  width: 50%;
+  outline: 2px solid green;
+  display: flex;
+}
+
+.logo span {
+  font-size: 1.7rem;
+}
+
+.logo img {
+  display: block;
+  width: 20px;
+  height: 20px;
+  outline: 2px solid red;
+}
+
+nav ul {
+  display: flex;
+  justify-content: space-evenly;
+  width: 50%;
+}
+
+nav ul li {
+  list-style-type: none;
+  font-size: 1.5rem;
+}
+
+
+/*STYLES FOR THE SEARCH COMPONENT  */
