--- a/src/index.css
+++ b/src/index.css
@@ -61,5 +61,17 @@ nav ul li {
   font-size: 1.5rem;
 }
 
-
 /*STYLES FOR THE SEARCH COMPONENT  */
+.search-container {
+  width: 310px;
+  height: min-content;
+  margin: 20px auto;
+  outline: 2px solid red;
+}
+
+.search {
+  width: 300px;
+  height: 50px;
+  padding: 5px;
+  font-size: 30px;
+}
