--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,15 @@
   --LOGO-FONT: "Poppins", sans-serif;
 }
 
+/* UTILITY CLASSES */
+.left {
+  text-align: left;
+}
+
+.center {
+  text-align: center;
+}
+
 /* STYLES FOR THE HEADER COMPONENT */
 nav {
   width: 100%;
@@ -65,7 +74,7 @@ nav ul li {
 .search-container {
   width: 310px;
   height: min-content;
-  margin: 20px auto;
+  margin: 40px auto;
   outline: 2px solid red;
 }
 
@@ -76,6 +85,99 @@ nav ul li {
   font-size: 30px;
 }
 
+/* Styles for HERO Component */
+.hero {
+  width: 100%;
+  height: 90vh;
+  outline: 2px solid green;
+  padding: 20px;
+}
 
-/* Styles for Weather Component */
+/* Weathercard styles */
+.weather-card--container {
+  outline: 5px dashed blue;
+  width: 100%;
+  height: 60%;
+  padding: 10px;
+}
 
+/* WeatherCardview / WeatherCard */
+.weather-card {
+  width: 45%;
+  height: 90%;
+  outline: 2px solid purple;
+  margin: 2px auto;
+  padding: 20px;
+  border-radius: 15px;
+}
+
+.city {
+  font-size: 25px;
+  margin-top: 10px;
+}
+
+.city span i {
+  font-size: 20px;
+  margin-left: 5px;
+}
+
+.temp {
+  font-size: 3.5rem;
+  font-weight: 700;
+  margin-top: 20px;
+  outline: 2px solid pink;
+}
+
+.temp img {
+  display: inline;
+}
+
+.temp .currentcloud {
+  outline: 1px dashed black;
+}
+
+.summary {
+  margin-top: 20px;
+}
+
+.today {
+  margin-top: 20px;
+}
+
+.small-infos {
+  width: 90%;
+  height: 20%;
+  outline: 2px solid yellow;
+  display: flex;
+  justify-content: space-evenly;
+  margin-top: 50px;
+}
+
+.small-infos div {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  outline: 2px orange dashed;
+  text-align: center;
+}
+
+/* weatherSmallContainers Styles */
+.weatherSmallContainers-container {
+  outline: 2px double olive;
+  width: 100%;
+  height: 20%;
+  margin-top: 20px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  padding: 10px;
+}
+
+.times {
+  width: 12%;
+  background-color: wheat;
+  height: 80%;
+  border-radius: 10px;
+  border: 3px solid black;
+  padding: 20px;
+}
