--- a/src/index.css
+++ b/src/index.css
@@ -174,10 +174,38 @@ nav ul li {
 }
 
 .times {
-  width: 12%;
+  width: 10%;
   background-color: wheat;
   height: 80%;
   border-radius: 10px;
-  border: 3px solid black;
-  padding: 20px;
+  position: relative;
+}
+
+.times-design {
+  width: 100%;
+  height: 60%;
+  background-color: rgb(168, 138, 84);
+  position: absolute;
+  bottom: -1px;
+  border-radius: 10px;
+  z-index: 1;
+}
+
+.times-details span {
+  display: block;
+}
+
+.times-details {
+  z-index: 5;
+  position: absolute;
+  width: 90%;
+  height: 80%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+}
+
+/* FOOTER STYLES */
+footer p {
+  font-size: 1.5rem;
 }
