--- a/src/index.css
+++ b/src/index.css
@@ -72,17 +72,37 @@ nav ul li {
 
 /*STYLES FOR THE SEARCH COMPONENT  */
 .search-container {
-  width: 310px;
+  width: 510px;
+  position: relative;
+  display: flex;
+  align-items: center;
+  padding: 10px 15px;
+  border: 1px solid #ccc;
+  border-radius: 25px;
+  background-color: #f5f6fa;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  transition: box-shadow 0.3s;
   height: min-content;
   margin: 40px auto;
-  outline: 2px solid red;
+}
+
+.search-container:hover {
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
 }
 
 .search {
-  width: 300px;
-  height: 50px;
-  padding: 5px;
+  width: 100%;
+  border: none;
+  outline: none;
+  background-color: transparent;
   font-size: 30px;
+}
+
+.search-container i {
+  cursor: pointer;
+  margin-right: 10px;
+  color: #666;
+  font-size: 25px;
 }
 
 /* Styles for HERO Component */
@@ -99,16 +119,21 @@ nav ul li {
   width: 100%;
   height: 60%;
   padding: 10px;
+  display: flex;
+  justify-content: space-between;
 }
 
 /* WeatherCardview / WeatherCard */
 .weather-card {
-  width: 45%;
-  height: 90%;
+  width: 30%;
+  height: 100%;
   outline: 2px solid purple;
-  margin: 2px auto;
   padding: 20px;
   border-radius: 15px;
+}
+
+.weather-card h1 {
+  text-align: center;
 }
 
 .city {
@@ -193,6 +218,13 @@ nav ul li {
 
 .times-details span {
   display: block;
+}
+
+.times-details img {
+  width: 50px;
+  height: 50px;
+  display: block;
+  margin: 0 auto;
 }
 
 .times-details {
