--- a/src/index.css
+++ b/src/index.css
@@ -11,8 +11,11 @@
   --NAV-BGCOLOR: beige;
 
   /* DARKMODE */
+  --NAV-BGCOLOR-DARK: rgba(30, 30, 30, 0);
   --BODY-BGCOLOR-DARK: #1e1e1e;
+  --BODY-BGCOLOR-BLURDARK: rgba(30, 30, 30, 0.925);
   --SEARCHBAR-BGCOLOR-DARK: #d9d9d9;
+  --PURPLE-BLUR: purple;
   /* FONT-SIZE */
 
   /* FONT FAMILY */
@@ -37,8 +40,14 @@ body {
 }
 
 nav {
-  background-color: var(--BODY-BGCOLOR-DARK);
+  background-color: var(--NAV-BGCOLOR-DARK);
   font-family: var(--LOGO-FONT);
+  position: fixed;
+  top: 0px;
+}
+
+.hero {
+  margin-top: 50px;
 }
 
 .logo img {
@@ -117,11 +126,11 @@ nav {
     font-size: 30px;
   }
 
-  .search-container i {
+  .search-container img {
     cursor: pointer;
     margin-left: 10px;
-    font-size: 25px;
-    color: #524e4e;
+    width: 40px;
+    height: auto;
   }
 
   .error-container,
@@ -153,7 +162,10 @@ nav {
   .weather-card {
     width: 40%;
     height: 100%;
-    outline: 2px solid purple;
+    background: linear-gradient(45deg, purple, var(--BODY-BGCOLOR-DARK));
+    box-shadow: rgba(0, 0, 0, 0.65) 0px 54px 55px,
+      rgba(0, 0, 0, 0.5) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
+      rgba(0, 0, 0, 0.47) 0px 12px 13px, rgba(0, 0, 0, 0.2) 0px -3px 5px;
     padding: 20px;
     border-radius: 15px;
   }
@@ -238,7 +250,9 @@ nav {
   .times {
     width: 8%;
     background-color: purple;
-    box-shadow: 2px 2px 2px rgb(8, 8, 8);
+    box-shadow: rgba(0, 0, 0, 0.65) 0px 54px 55px,
+      rgba(0, 0, 0, 0.5) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
+      rgba(0, 0, 0, 0.47) 0px 12px 13px, rgba(0, 0, 0, 0.2) 0px -3px 5px;
     height: 90%;
     border-radius: 25px;
     position: relative;
@@ -247,7 +261,7 @@ nav {
   .times-design {
     width: 100%;
     height: 60%;
-    background-color: rgb(14, 12, 13);
+    background-color: var(--BODY-BGCOLOR-DARK);
     position: absolute;
     bottom: -2px;
     border-radius: 25px;
@@ -259,8 +273,8 @@ nav {
   }
 
   .times-details img {
-    width: 50px;
-    height: 50px;
+    width: 60px;
+    height: 60px;
     display: block;
     margin: 0 auto;
   }
@@ -280,6 +294,7 @@ nav {
     font-weight: 500;
     margin-top: 10px;
   }
+
   /* FOOTER STYLES */
   footer p {
     font-size: 1.5rem;
