--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@
 
 :root {
   /* DARKMODE */
-  --NAV-BGCOLOR-DARK: rgba(30, 30, 30, 0.637);
+  --NAV-BGCOLOR-DARK: rgba(30, 30, 30, 0.837);
   --BODY-BGCOLOR-DARK: #1e1e1e;
   --BODY-BGCOLOR-BLURDARK: rgba(30, 30, 30, 0.925);
   --SEARCHBAR-BGCOLOR-DARK: #d9d9d9;
@@ -71,9 +71,8 @@ nav ul {
 .hero {
   margin-top: 80px;
   width: 100%;
-  height: 180vh;
+  height: 160vh;
   padding: 10px 10px 0px;
-  outline: 2px solid green;
 }
 
 /* styles for mobile view search container */
@@ -122,13 +121,12 @@ nav ul {
 
 .weather-card--container {
   width: 100%;
-  height: 50%;
+  height: 60%;
   padding: 10px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
-  outline: 2px solid red;
 }
 
 /* +++++++++++++++++++++++ */
@@ -171,18 +169,107 @@ nav ul {
 }
 
 .temp {
-  outline: 2px solid pink;
   height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.temp img {
+  display: inline-block;
 }
 
 .temp-number {
-  display: inline-block;
   height: 40px;
   font-size: 40px;
   font-weight: 400;
 }
 
+.today {
+  text-decoration: underline;
+}
+
+.small-infos {
+  width: 90%;
+  height: 35%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  margin: 20px auto 0px;
+}
+
+.small-infos div {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
 /* ----- */
+
+/* Small weather container mobile view */
+
+.weatherSmallContainers {
+  width: 90%;
+  height: 40%;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(4, 1fr);
+  gap: 20px;
+  margin: 20px auto 0px;
+  padding: 10px;
+}
+/* \\\\\ test /// */
+
+.times {
+  background-color: purple;
+  box-shadow: rgba(0, 0, 0, 0.65) 0px 54px 55px,
+    rgba(0, 0, 0, 0.5) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
+    rgba(0, 0, 0, 0.47) 0px 12px 13px, rgba(0, 0, 0, 0.2) 0px -3px 5px;
+  border-radius: 25px;
+  position: relative;
+}
+
+.times-design {
+  width: 102%;
+  height: 60%;
+  background-color: var(--BODY-BGCOLOR-DARK);
+  position: absolute;
+  bottom: -2px;
+  border-radius: 25px;
+  z-index: 4;
+}
+
+.times-details span {
+  display: block;
+}
+
+.times-details img {
+  width: 60px;
+  height: 60px;
+  display: block;
+  margin: 0 auto;
+}
+
+.times-details {
+  z-index: 5;
+  position: absolute;
+  width: 90%;
+  height: 80%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+}
+
+.times-details h6 {
+  font-size: 17px;
+  font-weight: 500;
+  margin-top: 10px;
+}
+
+/* ******** */
+footer {
+  margin-top: 80px;
+}
 
 footer p a {
   color: white;
@@ -293,6 +380,7 @@ footer p a {
 
   .temp {
     margin-top: 20px;
+    height: 70px;
   }
 
   .thermometer {
@@ -307,23 +395,19 @@ footer p a {
     font-weight: 400;
   }
 
-  .temp img {
-    display: inline;
-  }
-
   .summary {
     margin-top: 10px;
   }
 
   .today {
     margin-top: 20px;
-    text-decoration: underline;
   }
 
   .small-infos {
     width: 90%;
     height: 15%;
     display: flex;
+    flex-direction: row;
     justify-content: space-evenly;
     margin: 50px auto 0px;
   }
@@ -336,7 +420,7 @@ footer p a {
   }
 
   /* weatherSmallContainers Styles */
-  .weatherSmallContainers-container {
+  .weatherSmallContainers {
     width: 80%;
     height: 20%;
     margin: 20px auto 0px;
@@ -348,53 +432,18 @@ footer p a {
 
   .times {
     width: 8%;
-    background-color: purple;
-    box-shadow: rgba(0, 0, 0, 0.65) 0px 54px 55px,
-      rgba(0, 0, 0, 0.5) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
-      rgba(0, 0, 0, 0.47) 0px 12px 13px, rgba(0, 0, 0, 0.2) 0px -3px 5px;
     height: 90%;
-    border-radius: 25px;
-    position: relative;
   }
 
-  .times-design {
-    width: 100%;
-    height: 60%;
-    background-color: var(--BODY-BGCOLOR-DARK);
-    position: absolute;
-    bottom: -2px;
-    border-radius: 25px;
-    z-index: 1;
-  }
-
-  .times-details span {
-    display: block;
-  }
-
-  .times-details img {
-    width: 60px;
-    height: 60px;
-    display: block;
-    margin: 0 auto;
-  }
-
-  .times-details {
-    z-index: 5;
-    position: absolute;
-    width: 90%;
-    height: 80%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-  }
-
-  .times-details h6 {
-    font-size: 17px;
-    font-weight: 500;
-    margin-top: 10px;
+  .weatherSmallContainers div:last-child {
+    display: none;
   }
 
   /* FOOTER STYLES */
+  footer {
+    margin-top: 0px;
+  }
+
   footer p {
     font-size: 1.5rem;
   }
