--- a/src/index.css
+++ b/src/index.css
@@ -71,7 +71,7 @@ nav ul {
 .hero {
   margin-top: 80px;
   width: 100%;
-  height: 160vh;
+  height: 200vh;
   padding: 10px 10px 0px;
 }
 
@@ -121,7 +121,7 @@ nav ul {
 
 .weather-card--container {
   width: 100%;
-  height: 60%;
+  height: 55%;
   padding: 10px;
   display: flex;
   flex-direction: column;
@@ -134,7 +134,7 @@ nav ul {
 /*--- WeatherCardview / WeatherCard ---*/
 .weather-card {
   width: 90%;
-  height: 45%;
+  height: 48%;
   background: linear-gradient(45deg, purple, var(--BODY-BGCOLOR-DARK));
   box-shadow: rgba(0, 0, 0, 0.65) 0px 54px 55px,
     rgba(0, 0, 0, 0.5) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
@@ -150,6 +150,7 @@ nav ul {
 
 .city {
   font-weight: 200;
+  margin-top: 15px;
   text-align: center;
 }
 
@@ -185,8 +186,14 @@ nav ul {
   font-weight: 400;
 }
 
+.summary {
+  margin-top: 10px;
+}
+
 .today {
   text-decoration: underline;
+  display: block;
+  margin-top: 15px;
 }
 
 .small-infos {
@@ -210,12 +217,12 @@ nav ul {
 
 .weatherSmallContainers {
   width: 90%;
-  height: 40%;
+  height: 35%;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(4, 1fr);
   gap: 20px;
-  margin: 20px auto 0px;
+  margin: 50px auto 0px;
   padding: 10px;
 }
 /* \\\\\ test /// */
@@ -244,8 +251,8 @@ nav ul {
 }
 
 .times-details img {
-  width: 60px;
-  height: 60px;
+  width: 40px;
+  height: 40px;
   display: block;
   margin: 0 auto;
 }
@@ -267,9 +274,6 @@ nav ul {
 }
 
 /* ******** */
-footer {
-  margin-top: 80px;
-}
 
 footer p a {
   color: white;
